--- a/samples/jquery-webpart/package.json
+++ b/samples/jquery-webpart/package.json
@@ -14,7 +14,9 @@
     "@microsoft/sp-office-ui-fabric-core": "1.12.1",
     "@microsoft/sp-property-pane": "1.12.1",
     "@microsoft/sp-webpart-base": "1.12.1",
+    "bootstrap": "^5.1.0",
     "jquery": "^2.2.4",
+    "jquery-ui-dist": "^1.12.1",
     "jqueryui": "^1.11.1"
   },
   "devDependencies": {
